[package]
name = "depo"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
http = "1.4.0"
hyper = { version = "1.8.1", features = ["full"] }
rand = "0.10.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["tracing", "time"] }
