[package]
name = "depo"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.11.1", features = ["serde"] }
futures = "0.3.32"
h2 = "0.4.13"
http = "1.4.0"
pin-project = "1.1.11"
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["tracing"] }
